--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,8 +8,9 @@
 body {
   background: #f8f8f8;
   color: #29292e;
+  padding-bottom: 5rem;
 }
 
 body, input, button, textarea {
-  font: 400 15px "Roboto", sans-serif;
+  font: 400 1rem "Roboto", sans-serif;
 }
