--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -1,19 +1,18 @@
 .button {
-  height: 3rem;
   border-radius: 0.3rem;
   font-weight: 500;
   background: #835afd;
   color: #fff;
-  padding: 0 32px;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  border: 0;
-  transition: filter 0.2s;
+  border: none;
+  transition: filter 200ms;
 
   img {
-    margin-right: 8px;
+    margin-right: 0.5rem;
   }
 
   &.outlined {
