--- a/src/components/RoomCode/styles.scss
+++ b/src/components/RoomCode/styles.scss
@@ -1,15 +1,15 @@
 .room-code {
-  height: 40px;
-  border-radius: 8px;
-  overflow: hidden;
+  min-height: 2.5rem;
+  border-radius: 0.3rem;
   background: #fff;
   border: 1px solid #835afd;
   cursor: pointer;
   display: flex;
+  overflow: hidden;
 
   div {
     background: #835afd;
-    padding: 0 12px;
+    padding-inline: 0.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,10 +19,12 @@
   span {
     display: block;
     align-self: center;
-    flex: 1;
-    padding: 0 16px 0 12px;
-    width: 240px;
-    font-size: 14px;
+    padding-inline: 0.5rem;
+    width: 7rem;
+    font-size: 0.8rem;
     font-weight: 500;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
