--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -84,7 +84,7 @@
         &::before {
           content: "";
           flex: 1;
-          height: 0.0625rem;
+          height: 1px;
           background: #a8a8b3;
           margin-right: 1rem;
         }
@@ -92,7 +92,7 @@
         &::after {
           content: "";
           flex: 1;
-          height: 0.0625rem;
+          height: 1px;
           background: #a8a8b3;
           margin-left: 1rem;
         }
@@ -112,7 +112,7 @@
         input {
           display: flex;
           height: 3rem;
-          border: 0.0625rem solid #a8a8b3;
+          border: 1px solid #a8a8b3;
           border-radius: 0.3rem;
           width: 100%;
           padding-inline: 1rem;
