--- a/src/pages/NewRoom/styles.scss
+++ b/src/pages/NewRoom/styles.scss
@@ -51,22 +51,7 @@
 
       > img {
         align-self: center;
-      }
-
-      .user-info {
-        display: flex;
-        gap: 1rem;
-        align-items: center;
-        justify-content: center;
-
-        img {
-          width: 4rem;
-          border-radius: 2rem;
-        }
-
-        span {
-          font-weight: 500;
-        }
+        margin-top: 1rem;
       }
 
       h2 {
@@ -78,7 +63,7 @@
         input {
           display: flex;
           height: 3rem;
-          border: 0.0625rem solid #a8a8b3;
+          border: 1px solid #a8a8b3;
           border-radius: 0.3rem;
           width: 100%;
           padding-inline: 1rem;
